hphp/hack/test/typecheck/array_map4.php.exp
File "array_map4.php", line 6, characters 13-14:
Invalid argument (Typing[4110])
File "builtins.hhi", line 56, characters 10-18:
This is a function
File "array_map4.php", line 4, characters 3-11:
It is incompatible with an object of type Container
